chage branh before commit